# celix

./: .travis.yml  CMakeLists.txt  diff.tmp
bundles/pubsub/: CMakeLists.txt
bundles/pubsub/pubsub_admin_tcc/: CMakeLists.txt
bundles/pubsub/pubsub_admin_tcc/src/: psa_tcc_activator.cc  pubsub_activator.h  pubsub_base_admin.h
bundles/pubsub/pubsub_admin_tcp/: CMakeLists.txt
bundles/pubsub/pubsub_admin_tcp/src/: pubsub_psa_tcp_constants.h  pubsub_tcp_admin.c  pubsub_tcp_buffer_handler.c  pubsub_tcp_buffer_handler.h  pubsub_tcp_common.c  pubsub_tcp_common.h  pubsub_tcp_handler.c  pubsub_tcp_handler.h  pubsub_tcp_topic_receiver.c  pubsub_tcp_topic_receiver.h  pubsub_tcp_topic_sender.c  pubsub_tcp_topic_sender.h
bundles/pubsub/pubsub_admin_websocket/: CMakeLists.txt
bundles/pubsub/pubsub_admin_websocket/src/: pubsub_psa_websocket_constants.h  pubsub_websocket_admin.c  pubsub_websocket_common.c  pubsub_websocket_common.h  pubsub_websocket_handler.c  pubsub_websocket_handler.h  pubsub_websocket_topic_receiver.c  pubsub_websocket_topic_receiver.h  pubsub_websocket_topic_sender.c  pubsub_websocket_topic_sender.h
bundles/pubsub/pubsub_protocol/pubsub_protocol_json_wire/: CMakeLists.txt
bundles/pubsub/pubsub_protocol_wire_v1/src/: pubsub_wire_protocol_impl.c
bundles/pubsub/pubsub_protocol_wire_v2/: CMakeLists.txt
bundles/pubsub/test/: CMakeLists.txt
cmake/celix_project/: AddGTest.cmake
cmake/cmake_celix/: BundlePackaging.cmake
examples/celix-examples/: CMakeLists.txt
examples/celix-examples/best_practice_example_cxx/: CMakeLists.txt
examples/celix-examples/best_practice_example_cxx/api/: IAnotherExample.h
examples/celix-examples/best_practice_example_cxx/bar/: BarActivator.cc  BarActivator.h
examples/celix-examples/best_practice_example_cxx/baz/: BazActivator.cc  BazActivator.h
examples/celix-examples/best_practice_example_cxx/foo/: FooActivator.cc  FooActivator.h
examples/celix-examples/bundle_example_cxx/: CMakeLists.txt
examples/celix-examples/services_example_cxx/: CMakeLists.txt
examples/celix-examples/shell_command_example/: CMakeLists.txt
framework/: CMakeLists.txt
framework/gtest/: CMakeLists.txt
framework/gtest/src/: cxx_BundleContext_tests.cc  cxx_FrameworkFactory_tests.cc
framework/include/: bundle.h  bundle_context.h  celix_bundle.h  celix_bundle_context.h  celix_launcher.h  framework.h
framework/include/celix/: Bundle.h  BundleActivator.h  BundleContext.h  Celix.h  Constants.h  Framework.h  IBundleActivator.h  IServiceFactory.h  Properties.h
framework/private/mock/: bundle_context_mock.c  bundle_mock.c  framework_mock.c
framework/src/: BundleImpl.c  bundle.c  bundle_context.c  framework.c  framework_private.h
libs/framework/: CMakeLists.txt
libs/framework/gtest/: CMakeLists.txt
libs/framework/include/: bundle.h  bundle_context.h  bundle_context.h.orig  celix_bundle_context.h  celix_bundle_context.h.orig  celix_constants.h  celix_launcher.h  constants.h  constants.h.orig  dm_component.h  framework.h  framework.h.orig  service_listener.h  service_reference.h  service_reference.h.orig
libs/framework/src/: bundle.c  bundle.c.orig  bundle_context.c  bundle_context.c.orig  framework.c  framework.c.orig  framework_private.h  framework_private.h.orig  service_tracker.c  service_tracker.c.orig
libs/utils/: CMakeLists.txt  CMakeLists.txt.orig
shell/: CMakeLists.txt
utils/: CMakeLists.txt
utils/include/: celix_exports.h
(+80 files in other folders)
